--- a/CPJIT.Library.Test/CPJIT.Library.Test.csproj
+++ b/CPJIT.Library.Test/CPJIT.Library.Test.csproj
@@ -56,6 +56,7 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TestMessageProcess.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
