--- a/CPJIT.Library.Util/CPJIT.Library.Util.csproj
+++ b/CPJIT.Library.Util/CPJIT.Library.Util.csproj
@@ -22,6 +22,7 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <Prefer32Bit>false</Prefer32Bit>
+    <PlatformTarget>AnyCPU</PlatformTarget>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
@@ -94,6 +95,7 @@
     <Compile Include="SocketUtil\TcpClientUtil.cs" />
     <Compile Include="SocketUtil\TcpServerUtil.cs" />
     <Compile Include="SocketUtil\UdpUtil.cs" />
+    <Compile Include="SoundUtil\SoundRecordUtil.cs" />
     <Compile Include="WCFUtil\Enums\TransferProtocol.cs" />
     <Compile Include="WCFUtil\Factory\WCFChannelFactory.cs" />
     <Compile Include="WCFUtil\Interfaces\IServiceInvoker.cs" />
