--- a/CPJIT.Library.Util/CPJIT.Library.Util.csproj
+++ b/CPJIT.Library.Util/CPJIT.Library.Util.csproj
@@ -47,6 +47,9 @@
     <Reference Include="MySql.Data">
       <HintPath>..\DLL\MySql.Data.dll</HintPath>
     </Reference>
+    <Reference Include="Newtonsoft.Json">
+      <HintPath>..\DLL\Newtonsoft.Json.dll</HintPath>
+    </Reference>
     <Reference Include="Oracle.ManagedDataAccess">
       <HintPath>..\DLL\Oracle.ManagedDataAccess.dll</HintPath>
     </Reference>
@@ -85,11 +88,12 @@
     <Compile Include="DataBaseUtil\Impl\SQLiteHelper.cs" />
     <Compile Include="DirecoryUtil\IniUtil.cs" />
     <Compile Include="DirecoryUtil\FolderUtil.cs" />
+    <Compile Include="JsonUtil\JsonValidateUtil.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SecurityUtil\MD5Util.cs" />
     <Compile Include="SecurityUtil\RC2Util.cs" />
-    <Compile Include="SerializeUtil\JsonSeializeUtil.cs" />
-    <Compile Include="SerializeUtil\XmlSerializeUtil.cs" />
+    <Compile Include="JsonUtil\JsonSeializeUtil.cs" />
+    <Compile Include="XmlUtil\XmlSerializeUtil.cs" />
     <Compile Include="SocketUtil\DataEventArgs.cs" />
     <Compile Include="SocketUtil\SessionEventArgs.cs" />
     <Compile Include="SocketUtil\TcpClientUtil.cs" />
