ActivemqUtil新增IConsumer消费者批量注册方式。[V1.0.2018.1444]

--- a/CPJIT.Library.CPJ4net/CPJIT.Library.CPJ4net.csproj
+++ b/CPJIT.Library.CPJ4net/CPJIT.Library.CPJ4net.csproj
@@ -99,6 +99,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ActivemqUtil\IConsumer.cs" />
     <Compile Include="ActivemqUtil\IMessageManager.cs" />
     <Compile Include="ActivemqUtil\Impl\AbstractMessageManager.cs" />
     <Compile Include="ActivemqUtil\Model\DataEventArgs.cs" />
